--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -78,16 +78,16 @@ make_format_words = function(min_font, font_exp_scale) {
     }
 }
 
-node_sizer = function(node){
-	node_size = 0;
+node_size = function(node){
+	size = 0;
 	for(word = 0; word < node.words.length; word++){
-		node_size += node.words[word].lambda_ss;
+		size += node.words[word].lambda_ss;
 	}
-	return node_size;
+	return size;
 }
 
 add_lambda_ss_text = function(font_size){
-	return function(d){ return "<div id=\"lambda_text\" style=\"font-size: " + font_size +"px\">" + Math.round(1000*node_sizer(d))/1000 + "</div>";
+	return function(d){ return "<div id=\"lambda_text\" style=\"font-size: " + font_size +"px\">" + Math.round(1000*node_size(d))/1000 + "</div>";
 	}
 }
 
@@ -132,7 +132,7 @@ update_graph = function() {
     .html(make_format_words(6, 2));
 
 	node.append("circle")
-		.attr("r", function(d){return Math.max(Math.log(node_sizer(d)),2);})
+		.attr("r", function(d){return Math.max(Math.log(node_size(d)),2);})
 		.style("fill", function(d) {return stringColor(d.Elogpi*-1);})
         .style("stroke", function(d) {return stringColor(d.Elogpi*-1);})
         .style("stroke-opacity", function(d) { return 0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1);})
@@ -197,8 +197,8 @@ d3.json("graph.json", function(error, root) {
     }
 
 	maximum_node_size_subtreeChildren = function(max_var_param, node){
-        if(max_var_param < node_sizer(node)){
-            max_var_param = node_sizer(node);
+        if(max_var_param < node_size(node)){
+            max_var_param = node_size(node);
         }
         for (var c in node.children) {
             child = node.children[c];
