--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -78,16 +78,20 @@ make_format_words = function(min_font, font_exp_scale) {
     }
 }
 
-node_size = function(node){
-	size = 0;
+lambda_ss_sum = function(node){
+	var s = 0;
 	for(word = 0; word < node.words.length; word++){
-		size += node.words[word].lambda_ss;
+		s += node.words[word].lambda_ss;
 	}
-	return size;
+	return s;
+}
+
+node_size = function(node){
+    return Math.max(Math.min(Math.log(lambda_ss_sum(node)),40),2);
 }
 
 add_lambda_ss_text = function(font_size){
-	return function(d){ return "<div id=\"lambda_text\" style=\"font-size: " + font_size +"px\">" + Math.round(1000*node_size(d))/1000 + "</div>";
+	return function(d){ return "<div id=\"lambda_text\" style=\"font-size: " + font_size +"px\">" + Math.round(1000*lambda_ss_sum(d))/1000 + "</div>";
 	}
 }
 
@@ -132,7 +136,7 @@ update_graph = function() {
     .html(make_format_words(6, 2));
 
 	node.append("circle")
-		.attr("r", function(d){return Math.max(Math.log(node_size(d)),2);})
+		.attr("r", function(d){return node_size(d);})
 		.style("fill", function(d) {return stringColor(d.Elogpi*-1);})
         .style("stroke", function(d) {return stringColor(d.Elogpi*-1);})
         .style("stroke-opacity", function(d) { return 0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1);})
