put inactive node size back O_o

--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -88,7 +88,7 @@ $num_windows = 0;
 $num_graphs = 0;
 
 node_size = function(d) {
-    return d.active ? Math.max(Math.min(Math.log(d.lambda_ss),10),2);
+    return d.active ? Math.max(Math.min(Math.log(d.lambda_ss),10),2) : 2;
 }
 
 set_node_text = function(node, text) {
