filter works I think

--- a/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
@@ -118,26 +118,58 @@ update_nav_text = function() {
     set_node_text(document.getElementById("num_graphs_text"), $num_graphs);
 }
 
+compare_int_arrays = function(array1, array2){
+	var equal = true;
+	if(array1 != null && array2 != null){
+		if(array1.length == array2.length){
+			for(index = 0; index < array1.length; index++){
+				if(array1[index] != array2[index]){
+					equal = false;
+				}
+			}
+		}else{
+			equal = false;
+		}
+	}else{
+		equal = false;
+	}
+	return equal;
+}
+
+index_in_array = function(innerArray, outerArray){
+	var index_in_array = -1;
+	for(arrayx = 0; arrayx < outerArray.length; arrayx++){
+		if(compare_int_arrays(innerArray, outerArray[arrayx]) == true){
+			index_in_array = arrayx;
+			break;
+		}
+	}
+	return index_in_array;
+}
+
 node_sort_array = [];
 
 filter_node_first = function(node){
 	var end_sort = $root.length;
 	var root_index = 0;
-	if(node_sort_array.indexOf(node) == -1){
-		node_sort_array[node_sort_array.length] = node;
-		for(graphNum = 0; graphNum < $root.length; graphNum++){
-			lookup_node($root[graphNum]["subtree"], node.node_placement).circled = true;
-		}
-	}else{
-		var indexOfNode = node_sort_array.indexOf(node);
-		node_sort_array.splice(indexOfNode,1);
-		for(graphNum = 0; graphNum < $root.length; graphNum++){
-			lookup_node($root[graphNum]["subtree"], node.node_placement).circled = false;
+	if(node != null){
+		if(index_in_array(node.node_placement, node_sort_array) == -1){
+			node_sort_array[node_sort_array.length] = node.node_placement;
+			for(graphNum = 0; graphNum < $root.length; graphNum++){
+				lookup_node($root[graphNum]["subtree"], node.node_placement).circled = true;
+			}
+		}else{
+			var indexOfNode = index_in_array(node.node_placement, node_sort_array);
+			node_sort_array.splice(indexOfNode,1);
+			for(graphNum = 0; graphNum < $root.length; graphNum++){
+				lookup_node($root[graphNum]["subtree"], node.node_placement).circled = false;
+			}
+			filter_node_first(null);
 		}
 	}
 	for(CirNode = 0; CirNode < node_sort_array.length; CirNode++){
 		for(graphNum = 0; graphNum < end_sort; graphNum++){
-			if(lookup_node($root[graphNum]["subtree"], node_sort_array[CirNode].node_placement).active == true){
+			if(lookup_node($root[graphNum]["subtree"], node_sort_array[CirNode]).active == true){
 				var temp = $root[graphNum];
 				$root[graphNum] = $root[root_index];
 				$root[root_index] = temp;
