--- a/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
@@ -154,6 +154,19 @@ index_in_array = function(innerArray, outerArray){
 	return index_in_array;
 }
 
+
+qsort = function(a) {
+    if (a.length == 0) return [];
+ 
+    var left = [], right = [], pivot = a[0].total_lambda_ss;
+ 
+    for (var i = 1; i < a.length; i++) {
+        a[i].total_lambda_ss > pivot ? left.push(a[i]) : right.push(a[i]);
+    }
+ 
+    return qsort(left).concat(a[0], qsort(right));
+}
+
 node_sort_array = [];
 
 filter_node_first = function(node){
@@ -186,8 +199,52 @@ filter_node_first = function(node){
 		end_sort = root_index;
 		root_index = 0;
 	}
-	update_graphs();
+
+	for(graphNum = 0; graphNum < $root.length; graphNum++){
+		graphLambda = 0;
+		for(nodeInd = 0; nodeInd < node_sort_array.length; nodeInd++){
+			if(lookup_node($root[graphNum]["subtree"], node_sort_array[nodeInd]).active == true){
+				graphLambda += lookup_node($root[0]["subtree"], node_sort_array[nodeInd]).lambda_ss;
+			}
+		}
+		$root[graphNum].total_lambda_ss = graphLambda;
+	}
+
+	end_first_part_qsort = 0;
+	for(graphNum = 0; graphNum < $root.length; graphNum++){
+		addOne = 1;
+		for(nodeInd = 0; nodeInd < node_sort_array.length; nodeInd++){
+			if(lookup_node($root[0]["subtree"], node_sort_array[nodeInd]).active == false){
+				addOne = 0;
+			}
+		}
+		end_first_part_qsort += addOne;
+	}
 	
+	//NOTE: BESIDES ADDING ELEMENTS TO THESE ARRAYS AND REORDERING THEM, DO NOTHING ELSE. ALIASING CAN BE MEAN.
+	var firstArr = [];
+	var secondArr = [];
+	
+	for(graphNum = 0; graphNum < end_first_part_qsort; graphNum++){
+		firstArr[graphNum] = $root[graphNum];
+	}
+	
+	for(graphNum = end_first_part_qsort; graphNum < $root.length; graphNum++){
+		secondArr[graphNum-firstArr.length] = $root[graphNum];
+	}
+	
+	firstArr = qsort(firstArr);
+	secondArr = qsort(secondArr);
+	
+	for(var index = 0; index < secondArr.length; index++){
+		firstArr[firstArr.length + index] = secondArr[index];
+	}
+	
+	for(graphNum = 0; graphNum < firstArr.length; graphNum++){
+		$root[graphNum] = firstArr[graphNum];
+	}
+	
+	update_graphs();
 }
 
 update_graphs = function() {
