--- a/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
@@ -9,25 +9,12 @@ body {
     font: sans-serif;
 }
 
+.node {
+}
+
 .graph_container {
     float: left;
     padding: 10px;
-}
-
-.node circle {
-    stroke: #000;
-    stroke-width: 1.5px;
-    fill: #000;
-}
-
-.node {
-    font: 10px sans-serif;
-}
-
-.link {
-    fill: none;
-    stroke: #000;
-    stroke-width: 1.5px;
 }
 
 #inputWindowParameters {
@@ -38,13 +25,6 @@ body {
     background-color: rgba(255,255,255,.85);
     padding: 10px;
 }
-
-#lambda_text{
-    border: 1px solid black;
-	background-color: rgba(255,255,255,.85);
-    display: inline-block;
-    padding: 2px;
-}
 </style>
 
 </head>
@@ -53,24 +33,6 @@ body {
 <div>
 	<div id="inputWindowParameters">
     <div><a href="graph.html">graph</a></div>
-    <div>
-        navigate:
-        <input type="button" onclick="shift_window(-1)"
-        value="<" />
-        <input type="button" onclick="shift_window(1)"
-        value=">" />
-        window size: <input id="window_size" maxlength="3"
-        size="3" type="text" onchange="update_window_size()" />
-    </div>
-    <div id="status">
-        showing subgraphs <span id="window_start_text"></span> to
-        <span id="window_end_text"></span> of <span
-            id="num_graphs_text"></span>
-    </div>
-    <div id="showCounts">
-        <label for="showValues">show counts: </label><input type="checkbox"
-        onchange="update_graphs();" id="showValues"/>
-    </div>
 	</div>
 </div>
 
@@ -79,132 +41,75 @@ body {
 
 <script src="d3.v3.js"></script>
 
-<script src="core.js"></script>
-
 <script>
-$window_size = 5;
-$window_start = 0;
-$num_windows = 0;
-$num_graphs = 0;
-node_sort_array = [];
 
-update_graphs = function() {
-    update_nav_text();
 
-    graphs_container = document.getElementById("graphs_container");
-    while (graphs_container.hasChildNodes()) {
-        graphs_container.removeChild(graphs_container.firstChild);
+var graph_length = function(node) {
+    var nested_node = node;
+    for (var n = 0; nested_node.children.length > 0; ++n) {
+        nested_node = nested_node.children[0];
     }
-
-    var stringColor =
-    d3.scale.linear().domain([0,-1*minELogPi]).range(["red","blue"]);
-
-    for (var c = $window_start; c < $window_end; ++c) {
-        var cluster = d3.layout.cluster()
-
-        .size([$height , $width - 14*maxNodeSize]);
-
-        var graph_container = document.createElement("div");
-        graph_container.className = "graph_container";
-        graphs_container.appendChild(graph_container);
-
-        var klass = $root[c]["class"];
-        var class_container = document.createElement("div");
-        graph_container.appendChild(class_container);
-        var class_text = document.createTextNode(klass);
-        class_container.appendChild(class_text);
-
-        var inner_graph_container = document.createElement("div");
-        graph_container.appendChild(inner_graph_container);
-
-        var svg = d3.select(inner_graph_container).append("svg")
-        .attr("width", $width)
-        .attr("height", $height)
-        .append("g")
-        .attr("transform", "translate("+ 2.5*(maxNodeSize+1) +",0)");
-
-        var nodes = cluster.nodes($root[c]["sublist"]);
-        var links = cluster.links(nodes);
-
-        var link = svg.selectAll(".link")
-        .data(links)
-        .enter().append("path")
-        .attr("class", "link")
-        .attr("d", diagonal)
-        .style("stroke-opacity", function(d) { return d.target.active ?
-               "1" : "0.1"; });
-
-        var node = svg.selectAll(".node")
-        .data(nodes)
-        .enter().append("g")
-        .attr("class", "node")
-        .attr("transform", function(d) { return "translate(" +
-              d.y + "," + d.x + ")"; });
-
-        node.append("circle")
-		.attr("r", function(d){return node_size(d);})
-        .style("fill", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
-        .style("stroke", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
-        .style("stroke-opacity", function(d) { return d.active ?
-               (0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1)) : "0.1"; })
-        .style("fill-opacity", function(d) { return d.active ?
-               (0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1)) : "0.1"; });
-
-        node.append("circle")
-        .attr("r", maxNodeSize + 1)
-        .style("fill", "black")
-        .style("stroke", "black")
-        .style("stroke-opacity", function(d){return d.active ? (d.circled? "1":"0"): (d.circled? ".15":"0")})
-        .style("fill-opacity", "0")
-		.on("click", function(d){filter_node_first(d)})
-        .append("title")
-        .text(format_words);
-
-        if(document.getElementById("showValues").checked == true){
-			node.append("foreignObject")
-				.attr("width", 200)
-				.attr("height", 30)
-				.append("xhtml:body")
-				.html(add_lambda_ss_text(10));
-        }
-    }
+    return n;
 }
 
-var diagonal = d3.svg.diagonal()
-    .projection(function(d) { return [d.y, d.x]; })
-    .source(function (d) {
-        var s = Object.create(d.source);
-        s.y += node_size(s);
-        return s;
-    })
-    .target(function (d) {
-        var t = Object.create(d.target);
-        t.y -= node_size(t);
-        return t;
-    });
+var lookup_node = function(node, n) {
+    var nested_node = node;
+    for (var j = 0; j < n; ++j) {
+        nested_node = nested_node.children[0];
+    }
+    return nested_node
+}
+
 
 d3.json("graph.json", function(error, graph_root) {
-    $graph_root = graph_root;
     d3.json("subgraphs.json", function(error, root) {
-        $num_graphs = root.length;
-        $root = root;
-        node_placement_rootParent();
-        maxNodeSize = 0;
-        maxNodeSize = maximum_Node_Size_rootParent(maxNodeSize, $root);
-        minELogPi = 0;
-        minELogPi = minimum_ELogPi_rootParent(minELogPi, $root, "Elogpi");
-        
-		$width = maxNodeSize * 16 * (tree_depth(root[0]["sublist"]) + 1) + maxNodeSize;
-        sizes = tree_size_per_level(root[0]["sublist"]);
-        var eff_size = sizes[sizes.length - 1] + (sizes.length > 1 ? sizes[sizes.length - 2] : 0);
-        $height = maxNodeSize * 2.5 * eff_size + maxNodeSize;
+        var color_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
 
-        document.getElementById("window_size").value = $window_size;
-        update_window_size();
+        var node_size = 20;
+        var M = root.length;
+        var K = graph_length(graph_root) + 1;
+        var J = graph_length(root[0]["sublist"]) + 1;
 
-        d3.select(self.frameElement).style("height", $height + "px");
+        var svg_width = (J + 1) * node_size;
+        var svg_height = (K + 1) * node_size;
+
+        for (var m = 0; m < M; ++m) {
+            var graph_container = document.createElement("div");
+            graph_container.className = "graph_container";
+            graphs_container.appendChild(graph_container);
+
+            var klass = root[m]["class"];
+            var class_container = document.createElement("div");
+            graph_container.appendChild(class_container);
+            var class_text = document.createTextNode(klass);
+            class_container.appendChild(class_text);
+
+            var inner_graph_container = document.createElement("div");
+            graph_container.appendChild(inner_graph_container);
+
+            var svg = d3.select(inner_graph_container).append("svg")
+                    .attr("width", svg_width)
+                    .attr("height", svg_height)
+                .append("g")
+                    .attr("transform", "translate(0,0)");
+
+            var rect = svg.selectAll(".node")
+                    .data(d3.range(0, J*K))
+                .enter().append("rect")
+                    .attr("class", "node")
+                    .attr("width", node_size)
+                    .attr("height", node_size)
+                    .attr("x", function(d) { return (d % J) * node_size; })
+                    .attr("y", function(d) { return Math.floor(d / J) * node_size; });
+
+            rect.style("stroke", "#cac")
+                .style("fill", function(d) {
+                    var j = (d % J);
+                    var k = Math.floor(d / J);
+                    node = lookup_node(root[m]["sublist"], j);
+                    return color_ramp(node.zeta[k]);
+                });
+        }
     });
 });
 
