--- a/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
@@ -15,6 +15,8 @@ body {
 .graph_container {
     float: left;
     padding: 10px;
+    margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 #inputWindowParameters {
@@ -63,15 +65,17 @@ var lookup_node = function(node, n) {
 
 d3.json("graph.json", function(error, graph_root) {
     d3.json("subgraphs.json", function(error, root) {
-        var color_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
+        var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
+        var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
+        var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
 
         var node_size = 20;
         var M = root.length;
         var K = graph_length(graph_root) + 1;
         var J = graph_length(root[0]["sublist"]) + 1;
 
-        var svg_width = (J + 1) * node_size;
-        var svg_height = (K + 1) * node_size;
+        var svg_width = (J + 2) * node_size;
+        var svg_height = (K + 2) * node_size;
 
         for (var m = 0; m < M; ++m) {
             var graph_container = document.createElement("div");
@@ -93,21 +97,49 @@ d3.json("graph.json", function(error, graph_root) {
                 .append("g")
                     .attr("transform", "translate(0,0)");
 
+            var left_header_rect = svg.selectAll(".left_header_node")
+                    .data(d3.range(0, K))
+                .enter().append("rect")
+                    .attr("class", "left_header_node")
+                    .attr("width", node_size)
+                    .attr("height", node_size)
+                    .attr("y", function(k) { return (k + 2) * node_size; });
+
+            left_header_rect.style("stroke", "#cac")
+                .style("fill", function(k) {
+                    node = lookup_node(graph_root, k);
+                    return red_ramp(Math.exp(node.Elogpi));
+                });
+
+            var top_header_rect = svg.selectAll(".top_header_node")
+                    .data(d3.range(0, J))
+                .enter().append("rect")
+                    .attr("class", "top_header_node")
+                    .attr("width", node_size)
+                    .attr("height", node_size)
+                    .attr("x", function(j) { return (j + 2) * node_size; });
+
+            top_header_rect.style("stroke", "#cac")
+                .style("fill", function(j) {
+                    node = lookup_node(root[m]["sublist"], j);
+                    return blue_ramp(Math.exp(node.Elogpi));
+                });
+
             var rect = svg.selectAll(".node")
                     .data(d3.range(0, J*K))
                 .enter().append("rect")
                     .attr("class", "node")
                     .attr("width", node_size)
                     .attr("height", node_size)
-                    .attr("x", function(d) { return (d % J) * node_size; })
-                    .attr("y", function(d) { return Math.floor(d / J) * node_size; });
+                    .attr("x", function(d) { return (2 + (d % J)) * node_size; })
+                    .attr("y", function(d) { return (2 + Math.floor(d / J)) * node_size; });
 
             rect.style("stroke", "#cac")
                 .style("fill", function(d) {
                     var j = (d % J);
                     var k = Math.floor(d / J);
                     node = lookup_node(root[m]["sublist"], j);
-                    return color_ramp(node.zeta[k]);
+                    return purple_ramp(node.zeta[k]);
                 });
         }
     });
