--- a/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
@@ -88,6 +88,19 @@ $num_windows = 0;
 $num_graphs = 0;
 node_sort_array = [];
 
+var diagonal = d3.svg.diagonal()
+    .projection(function(d) { return [d.y, d.x]; })
+    .source(function (d) {
+        var s = Object.create(d.source);
+        s.y += node_size(s);
+        return s;
+    })
+    .target(function (d) {
+        var t = Object.create(d.target);
+        t.y -= node_size(t);
+        return t;
+    });
+
 update_graphs = function() {
     update_nav_text();
 
@@ -172,71 +185,13 @@ update_graphs = function() {
     }
 }
 
-var diagonal = d3.svg.diagonal()
-    .projection(function(d) { return [d.y, d.x]; })
-    .source(function (d) {
-        var s = Object.create(d.source);
-        s.y += node_size(s);
-        return s;
-    })
-    .target(function (d) {
-        var t = Object.create(d.target);
-        t.y -= node_size(t);
-        return t;
-    });
-
-minimum_param_rootParent = function(root, paramName){
-    var min_var_param = null;
-    for(indiv = 0; indiv < $num_graphs; indiv++){
-        minSubStat = minimum_param_subtreeChildren(min_var_param, root[indiv]["subtree"], paramName);
-        if(min_var_param === null || minSubStat < min_var_param){
-            min_var_param = minSubStat;
-        }
-    }
-    return min_var_param;
-}
-
-minimum_param_subtreeChildren = function(min_var_param, node, paramName){
-    if((min_var_param === null || min_var_param > node[paramName]) && paramName in node){
-        min_var_param = node[paramName];
-    }
-    for (var c in node.children) {
-        child = node.children[c];
-        min_var_param = minimum_param_subtreeChildren(min_var_param, child, paramName);
-    }
-    return min_var_param;
-}
-
-maximum_param_rootParent = function(root, paramName){
-    var max_var_param = null;
-    for(indiv = 0; indiv < $num_graphs; indiv++){
-        maxSubStat = maximum_param_subtreeChildren(max_var_param, root[indiv]["subtree"], paramName);
-        if(max_var_param === null || maxSubStat > max_var_param){
-            max_var_param = maxSubStat;
-        }
-    }
-    return max_var_param;
-}
-
-maximum_param_subtreeChildren = function(max_var_param, node, paramName){
-    if((max_var_param === null || max_var_param > node[paramName]) && paramName in node){
-        max_var_param = node[paramName];
-    }
-    for (var c in node.children) {
-        child = node.children[c];
-        max_var_param = maximum_param_subtreeChildren(max_var_param, child, paramName);
-    }
-    return max_var_param;
-}
-
 d3.json("graph.json", function(error, graph_root) {
     $graph_root = graph_root;
     d3.json("subgraphs.json", function(error, root) {
         $num_graphs = root.length;
         $root = root;
         node_placement_rootParent();
-        maxNodeSize = 0;
-        maxNodeSize = maximum_Node_Size_rootParent(maxNodeSize, $root);
+        maxNodeSize = maximum_Node_Size_rootParent($root);
         maxEtime = maximum_param_rootParent($root, "expected_time");
         minEtime = minimum_param_rootParent($root, "expected_time");
         minELogPi = minimum_param_rootParent($root, "Elogpi");
