add nice user selection to hdp subgraphs viz

--- a/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/hdp/postproc/subgraphs.html
@@ -35,6 +35,9 @@ body {
 <div>
 	<div id="inputWindowParameters">
     <div><a href="graph.html">graph</a></div>
+    <div>
+        <label for="user_select">user:</label>
+        <select id="user_select" onChange="update_graphs();"></select>
 	</div>
 </div>
 
@@ -62,35 +65,90 @@ var lookup_node = function(node, n) {
     return nested_node
 }
 
+var format_words = function(n) {
+    var graph_node = lookup_node($graph_root, n);
+    s = "";
+    for (w in graph_node.words) {
+        if (w > 0) {
+            s += " ";
+        }
+        s += graph_node.words[w]['word'];
+    }
+    return s;
+}
+
+var selected_user = null;
 
 d3.json("graph.json", function(error, graph_root) {
+    $graph_root = graph_root;
     d3.json("subgraphs.json", function(error, root) {
-        var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
-        var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
-        var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
+        $root = root;
 
-        var node_size = 10;
-        var D = root.length;
-        var K = graph_length(graph_root) + 1;
-        var L = graph_length(root[0]["sublist"]) + 1;
+        var user_select = document.getElementById("user_select");
 
-        var svg_width = (L + 2) * node_size;
-        var svg_height = (K + 2) * node_size;
+        var users = {};
+
+        var D = $root.length;
 
         for (var m = 0; m < D; ++m) {
+            var user = $root[m]["user"];
+
+            if (! (user in users)) {
+                users[user] = true;
+
+                var user_option = document.createElement("option");
+                user_select.appendChild(user_option);
+                user_option.setAttribute("value", user);
+                var user_option_text = document.createTextNode(user);
+                user_option.appendChild(user_option_text);
+            }
+        }
+
+        update_graphs();
+    });
+});
+
+var update_graphs = function() {
+    graphs_container = document.getElementById("graphs_container");
+    while (graphs_container.hasChildNodes()) {
+        graphs_container.removeChild(graphs_container.firstChild);
+    }
+
+    var purple_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c0c"]);
+    var red_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#c03"]);
+    var blue_ramp = d3.scale.linear().domain([0,1]).range(["#fff","#30c"]);
+
+    var node_size = 10;
+    var D = $root.length;
+    var K = graph_length($graph_root) + 1;
+    var L = graph_length($root[0]["sublist"]) + 1;
+
+    var svg_width = (L + 2) * node_size;
+    var svg_height = (K + 2) * node_size;
+
+    var user_select = document.getElementById("user_select");
+
+    var selected_user = user_select.value;
+
+    for (var m = 0; m < D; ++m) {
+        var doc_id = $root[m]["doc_id"];
+        var user = $root[m]["user"];
+        var date_str = $root[m]["date_str"];
+
+        if (selected_user == user) {
             var graph_container = document.createElement("div");
             graph_container.className = "graph_container";
             graphs_container.appendChild(graph_container);
 
             var doc_id_container = document.createElement("div");
             graph_container.appendChild(doc_id_container);
-            var doc_id = root[m]["doc_id"];
             var doc_id_text = document.createTextNode(doc_id);
             doc_id_container.appendChild(doc_id_text);
-            var user = root[m]["user"];
-            var date_str = root[m]["date_str"];
-            var metadata_text = document.createTextNode(" (" + user + ", " + date_str + ")");
-            doc_id_container.appendChild(metadata_text);
+
+            var date_container = document.createElement("div");
+            graph_container.appendChild(date_container);
+            var date_text = document.createTextNode(date_str);
+            date_container.appendChild(date_text);
 
             var inner_graph_container = document.createElement("div");
             graph_container.appendChild(inner_graph_container);
@@ -111,7 +169,7 @@ d3.json("graph.json", function(error, graph_root) {
 
             left_header_rect.style("stroke", "#cac")
                 .style("fill", function(k) {
-                    node = lookup_node(graph_root, k);
+                    node = lookup_node($graph_root, k);
                     return red_ramp(Math.exp(node.Elogpi));
                 });
 
@@ -125,7 +183,7 @@ d3.json("graph.json", function(error, graph_root) {
 
             top_header_rect.style("stroke", "#cac")
                 .style("fill", function(j) {
-                    node = lookup_node(root[m]["sublist"], j);
+                    node = lookup_node($root[m]["sublist"], j);
                     return blue_ramp(Math.exp(node.Elogpi));
                 });
 
@@ -142,12 +200,18 @@ d3.json("graph.json", function(error, graph_root) {
                 .style("fill", function(d) {
                     var j = (d % L);
                     var k = Math.floor(d / L);
-                    node = lookup_node(root[m]["sublist"], j);
+                    node = lookup_node($root[m]["sublist"], j);
                     return purple_ramp(node.phi[k]);
+                })
+                .append("title")
+                .text(function(d) {
+                    var j = (d % L);
+                    var k = Math.floor(d / L);
+                    return k + ": " + format_words(k);
                 });
         }
-    });
-});
+    }
+}
 
 </script>
 
